--- a/nougat/package.json
+++ b/nougat/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "firebase": "^8.6.0",
     "react": "^17.0.2",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
     "react-redux": "^7.2.4",
