--- a/nougat/package.json
+++ b/nougat/package.json
@@ -2,12 +2,14 @@
   "name": "nougat",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://sandbox-api-pay.line.me",
   "dependencies": {
     "@react-google-maps/api": "^2.1.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "crypto-js": "^4.0.0",
     "firebase": "^8.6.0",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
@@ -16,6 +18,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-uuid": "^1.0.2",
     "redux": "^4.1.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
@@ -43,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "start-server-and-test": "^1.12.2"
   }
 }
