--- a/nougat/package.json
+++ b/nougat/package.json
@@ -9,9 +9,11 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "crypto-js": "^4.0.0",
     "firebase": "^8.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
