--- a/nougat/package.json
+++ b/nougat/package.json
@@ -23,6 +23,7 @@
     "react-uuid": "^1.0.2",
     "redux": "^4.1.0",
     "styled-components": "^5.3.0",
+    "styled-icons": "^10.33.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
