--- a/nougat/package.json
+++ b/nougat/package.json
@@ -2,6 +2,7 @@
   "name": "nougat",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "proxy": "https://sandbox-api-pay.line.me",
   "dependencies": {
     "@react-google-maps/api": "^2.1.1",
@@ -27,9 +28,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "env-cmd react-scripts start",
-    "build": "react-scripts build",
-    "build:keys": "env-cmd react-scripts build",
+    "start": "export HTTPS=true&&SSL_CRT_FILE=cert.pem&&SSL_KEY_FILE=key.pem env-cmd react-scripts start",
+    "build": "env-cmd react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
