--- a/nougat/package.json
+++ b/nougat/package.json
@@ -5,6 +5,8 @@
   "proxy": "https://sandbox-api-pay.line.me",
   "homepage": ".",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@react-google-maps/api": "^2.1.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
