--- a/nougat/package.json
+++ b/nougat/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.6.0",
     "crypto-js": "^4.0.0",
     "firebase": "^8.6.0",
+    "notistack": "^1.0.9",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^1.6.0",
