--- a/nougat/package.json
+++ b/nougat/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/pickers": "^3.3.10",
     "@react-google-maps/api": "^2.1.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -15,11 +16,13 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "crypto-js": "^4.0.0",
+    "date-fns": "^2.21.3",
     "firebase": "^8.6.0",
     "notistack": "^1.0.9",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^1.6.0",
+    "react-calendar": "^3.4.0",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
