--- a/nougat/package.json
+++ b/nougat/package.json
@@ -34,6 +34,8 @@
     "react-swipeable-views": "^0.13.9",
     "react-uuid": "^1.0.2",
     "redux": "^4.1.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.3.0",
     "styled-icons": "^10.33.0",
     "web-vitals": "^1.1.2"
