--- a/nougat/package.json
+++ b/nougat/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "react-swipeable-views": "^0.13.9",
     "react-uuid": "^1.0.2",
     "redux": "^4.1.0",
