complete delivery location ui

--- a/nougat/package.json
+++ b/nougat/package.json
@@ -15,11 +15,13 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bodymovin": "^4.13.0",
     "bootstrap": "^4.6.0",
     "crypto-js": "^4.0.0",
     "date-fns": "^2.21.3",
     "firebase": "^8.6.0",
     "gsap": "file:gsap-bonus.tgz",
+    "lottie-web": "^5.7.11",
     "notistack": "^1.0.9",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
@@ -34,6 +36,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "react-swipeable-views": "^0.13.9",
+    "react-useanimations": "^2.0.6",
     "react-uuid": "^1.0.2",
     "redux": "^4.1.0",
     "semantic-ui-css": "^2.4.1",
