--- a/nougat/package.json
+++ b/nougat/package.json
@@ -43,6 +43,8 @@
     "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.3.0",
     "styled-icons": "^10.33.0",
+    "sweetalert2": "^11.0.16",
+    "sweetalert2-react-content": "^4.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
