added cloud functions to enable line pay

--- a/nougat/package.json
+++ b/nougat/package.json
@@ -2,8 +2,6 @@
   "name": "nougat",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://sandbox-api-pay.line.me",
-  "homepage": ".",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.29",
@@ -15,13 +13,12 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "bodymovin": "^4.13.0",
     "bootstrap": "^4.6.0",
+    "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "date-fns": "^2.21.3",
     "firebase": "^8.6.0",
     "gsap": "file:gsap-bonus.tgz",
-    "lottie-web": "^5.7.11",
     "notistack": "^1.0.9",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
